--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 	<li>jeffride - contributed to hacktoberfest</li> 
 	<li>atom - contributed to hacktoberfest</li> 
 	<li>Aashik - First time at HactoberFest</li>
+        <li>dhanushka - First time at HactoberFest</li>
 
 
 
