--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<li>jeffride - contributed to hacktoberfest</li> 
 	<li>atom - contributed to hacktoberfest</li> 
 	<li>Aashik - First time at HactoberFest</li>
-
+        <li>dulith - First time at HactoberFest</li>
 
 
 
